# kvsafe

./: .clang-format  CMakeLists.txt  COPYRIGHT  Makefile  README.md  entity.h  kvsafe.cpp  logger.cpp  logger.h  nameable.h  prop.h  store.h  store.hh  util.cpp  util.h
consoler/: interface.h  simple.h  xo.h
filer/: interface.h  simple.h
src/: entity.h  kvsafe.cpp  logger.h  nameable.h  password.h  prop.h  skippable.h  store.h  store.hh  util.h
src/consoler/: interface.h  simple.h  xo.h
src/filer/: interface.h  simple.h
src/password/: cacher.h  confirmer.h  interface.h  prompter.h
tests/: all.tcl  conf.tcl  t.entity.tcl  t.filename.tcl  t.noopt.tcl  t.pass.tcl
