CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(kvsafe VERSION 0.1.0)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_VERBOSE_MAKEFILE ON)
ADD_DEFINITIONS(-pipe -Wall -Werror)

# Find libxo
FIND_PATH(LIBXO_PREFIX include/libxo/xo.h REQUIRED)
FIND_LIBRARY(LIBXO_LIBRARY xo REQUIRED)
INCLUDE_DIRECTORIES(${LIBXO_PREFIX})
LIST(APPEND LIBS ${LIBXO_LIBRARY})

# Find libtomcrypt
FIND_PATH(TOMCRYPT_PREFIX include/tomcrypt.h REQUIRED)
FIND_LIBRARY(TOMCRYPT_LIBRARY tomcrypt REQUIRED)
INCLUDE_DIRECTORIES(${TOMCRYPT_PREFIX})
LIST(APPEND LIBS ${TOMCRYPT_LIBRARY})

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}
    ${LIBXO_PREFIX}/include
)
 
FILE(GLOB SRCS ${CMAKE_SOURCE_DIR}/*.cpp)
ADD_EXECUTABLE(kvsafe ${SRCS})
TARGET_LINK_LIBRARIES(kvsafe util ${LIBS})
