CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(kvsafe VERSION 0.1.0)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_VERBOSE_MAKEFILE ON)
ADD_DEFINITIONS(-pipe -Wall -Werror)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    ADD_DEFINITIONS(-O0)
ENDIF()

# Find libxo
FIND_PATH(LIBXO_PREFIX include/libxo/xo.h REQUIRED)
FIND_LIBRARY(LIBXO_LIBRARY xo REQUIRED)
INCLUDE_DIRECTORIES(${LIBXO_PREFIX}/include)
LIST(APPEND LIBS ${LIBXO_LIBRARY})

# Find nacl
FIND_PATH(NACL_PREFIX include/crypto_stream.h REQUIRED)
FIND_LIBRARY(NACL_LIBRARY nacl REQUIRED)
INCLUDE_DIRECTORIES(${NACL_PREFIX}/include)
LIST(APPEND LIBS ${NACL_LIBRARY})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
 
FILE(GLOB SRCS ${CMAKE_SOURCE_DIR}/*.cpp)
ADD_EXECUTABLE(kvsafe ${SRCS})
TARGET_LINK_LIBRARIES(kvsafe util ${LIBS})
